[[bin]]
path = 'src/main.rs'
name = 'tcp-warp'

[package]
name = 'tcp-warp-cli'
version = '0.1.0'
authors = ['Alexander Korolev <kilork@yandex.ru>']
edition = '2018'
categories = []
description = '''
tcp-warp-cli description.
'''
homepage = 'https://github.com/tcp-warp/tcp-warp'
keywords = []
license = 'Unlicense OR MIT'
readme = 'README.md'
repository = 'https://github.com/tcp-warp/tcp-warp'

[dependencies]
log = '0.4'
env_logger = '0.7'
clap-verbosity-flag = '0.3.0'
structopt = '0.3'
tcp-warp = '0.1'

[dependencies.tokio]
version = '0.2'
features = ['macros']

[profile.release]
lto = true
