[lib]
name = 'tcpwarp'

[package]
name = 'tcp-warp'
version = '0.1.0'
authors = ['Alexander Korolev <kilork@yandex.ru>']
edition = '2018'
description = '''
A userspace tunnel between two hosts mapping ports on client
machine to addresses reachable from server machine
'''
homepage = 'https://github.com/tcp-warp/tcp-warp'
keywords = [
    'tcp',
    'tunnel',
    'protocol',
    'proxy',
]
license = 'Unlicense OR MIT'
readme = 'README.md'
repository = 'https://github.com/tcp-warp/tcp-warp'
categories = ['network-programming']
[badges.appveyor]
repository = 'https://github.com/tcp-warp/tcp-warp'
branch = 'master'
service = 'github'

[badges.travis-ci]
repository = 'https://github.com/tcp-warp/tcp-warp'
branch = 'master'

[badges.maintenance]
status = 'actively-developed'

[dependencies]
bytes = '0.5'
futures = '0.3'
log = '0.4'

[dependencies.uuid]
version = '0.8'
features = ['v4']

[dependencies.tokio]
version = '0.2'
features = [
    'dns',
    'io-util',
    'tcp',
    'rt-core',
    'sync',
    'stream',
    'time',
]

[dependencies.tokio-util]
version = '0.2'
features = ['codec']
